--- a/index.html
+++ b/index.html
@@ -15,53 +15,50 @@
     <!-- CONTAINER - NAVBAR -->
 
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg  fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="#">MMV</a>
-            <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                aria-expanded="false" aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active " href="#" aria-current="page">About Me <span class="visually-hidden">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle active" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hobbies</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                      <a class="dropdown-item" href="./HTML/football.html">Football</a>
-                      <a class="dropdown-item" href="./HTML/Foreign.html">Foreign Travel</a>
-                      <a class="dropdown-item" href="./HTML/music.html">Music</a>
-                    </div>
-                  </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CV - Profesional</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="./HTML/cvManuel.html">CV - MANUEL</a>
-                    <a class="dropdown-item" href="#">CV - PDF</a>
-                  </div>
-                </li>
-              </ul>
-              <form class="d-flex my-2 my-lg-0">
-                <input class="form-control me-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <div class="container">
+           <a class="navbar-brand" href="#">MMV</a>
+           <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+               aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+           </button>
+           <div class="collapse navbar-collapse" id="collapsibleNavId">
+               <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+                   <li class="nav-item">
+                       <a class="nav-link active" href="./index.html" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
+                   </li>
+                   <li class="nav-item dropdown">
+                       <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                       <div class="dropdown-menu" aria-labelledby="dropdownId">
+                           <a class="dropdown-item" href="./HTML/football.html">FOOTBALL</a>
+                           <a class="dropdown-item" href="./HTML/Foreign.html">FOREIGN</a>
+                           <a class="dropdown-item" href="./HTML/music.html">MUSIC</a>
+                           <a class="dropdown-item" href="./HTML/cvManuel.html">CV -MANUEL MOYA</a>
+                       </div>
+                   </li>
+               </ul>
+               <form class="d-flex my-2 my-lg-0">
+                   <input class="form-control me-sm-2" type="text" placeholder="Search">
+                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+               </form>
+           </div>
+        </div>
+      </nav>
+      
+   </div>
     <!-- HOBBIES -->
         <!-- FOOTBALL -->
 
         <div id="football" class="container-fluid">
-           <a href="#" class="badge  text-decoration-none">FOOTBALL</a>
+           <a href="./HTML/football.html" class="badge  text-decoration-none">FOOTBALL</a>
         </div>
 
         <div id="foreing" class="container-fluid">
-            <a href="#" class="badge  text-decoration-none">FOREING</a>
+            <a href="./HTML/Foreign.html" class="badge  text-decoration-none">FOREING</a>
         </div>
 
         <div id="music" class="container-fluid">
-            <a href="#" class="badge text-decoration-none">MUSIC</a>
+            <a href="./HTML/music.html" class="badge text-decoration-none">MUSIC</a>
         </div>
 
 </body>
