--- a/HTML/music.html
+++ b/HTML/music.html
@@ -8,76 +8,65 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/custom2.css">
-    <script defer src="../JS/js2.js"></script>
     <title>Manuel Moya - Music</title>
 </head>
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg  fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="#">MMV</a>
-            <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                aria-expanded="false" aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active " href="./web.html" aria-current="page">About Me <span class="visually-hidden">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle active" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hobbies</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                      <a class="dropdown-item" href="./football.html">Football</a>
-                      <a class="dropdown-item" href="./foreing.html">Foreign Travel</a>
-                      <a class="dropdown-item" href="./music.html">Music</a>
-                    </div>
-                  </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CV - Profesional</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="./cvManuel.html">CV - MANUEL</a>
-                    <a class="dropdown-item" href="#">CV - PDF</a>
-                  </div>
-                </li>
-              </ul>
-              <form class="d-flex my-2 my-lg-0">
-                <input class="form-control me-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+           <div class="container">
+             <a class="navbar-brand" href="#">MMV</a>
+             <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                 aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="collapsibleNavId">
+                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../index.html" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
+                    </li>
+                     <li class="nav-item dropdown">
+                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">TOPICS</a>
+                         <div class="dropdown-menu" aria-labelledby="dropdownId">
+                           <a class="dropdown-item" href="./football.html">FOOTBALL</a>
+                           <a class="dropdown-item" href="./Foreign.html">FOREIGN</a>
+                           <a class="dropdown-item" href="./music.html">MUSIC</a>
+                           <a class="dropdown-item" href="./cvManuel.html">CV -MANUEL MOYA</a>
+                         </div>
+                     </li>
+                 </ul>
+                 <form class="d-flex my-2 my-lg-0">
+                     <input class="form-control me-sm-2" type="text" placeholder="Search">
+                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                 </form>
+             </div>
           </div>
         </nav>
-    </div>
-
-
-    <div id="cards" class="container-fluid">        
-        <!-- Modal trigger button -->
-        <button type="button" class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#modalId">
-          Launch
-        </button>
         
-        <!-- Modal Body -->
-        <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
-        <div class="modal fade" id="modalId" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalTitleId">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>I am a big fan of music. Apart from classical music and other types of music I like the most. To be exact, if I like the rhythm of the song, it is very likely that I will like it. Speaking about my favorite music I have to highlight two. Trap/rap and reggaeton.
-                            On the trap/rap side we have Eladio Carrion. On the other hand, in reggaeton my favorite referent is Bad bunny. But if I had to choose one genre, it would be trap.
-                        </p>
-                        <br><br>
-                        <p>Like I said before, my favorite music is rap/trap. Apart from the rhythm that appears in each song of this genre, I have to say that in this case what I love about this genre is the lyrics. The lyrics of the songs literally touch my heart. In fact I have acquired the habit of listening to this genre of music every time I study or want to distract myself. Eladio Carrión is the singer who most conveys sensations to me with his lyrics. I guess it's because I identify with them.</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save</button>
-                    </div>
+     </div>
+
+
+    <div id="cards" class="container-fluid">
+        <div id="card" class="card-group">
+            <div class="card">
+                <div id="cBody" class="card-body">
+                    <h4 class="card-title">General Music</h4>
+                    <span class="card-text">Rap/Trap - Reggeaton</span>
+                    <p>I am a big fan of music. Apart from classical music and other types of music I like the most. To be exact, if I like the rhythm of the song, it is very likely that I will like it. Speaking about my favorite music I have to highlight two. Trap/rap and reggaeton.
+                        On the trap/rap side we have Eladio Carrion. On the other hand, in reggaeton my favorite referent is Bad bunny. But if I had to choose one genre, it would be trap.
+                    </p>
                 </div>
             </div>
         </div>
+        <div id="card" class="card-group">
+            <div class="card">
+                <div id="cBody" class="card-body">
+                    <h4 class="card-title">Rap/Trap</h4>
+                    <span class="card-text">Favorite Genre</span>
+                    <p>Like I said before, my favorite music is rap/trap. Apart from the rhythm that appears in each song of this genre, I have to say that in this case what I love about this genre is the lyrics. The lyrics of the songs literally touch my heart. In fact I have acquired the habit of listening to this genre of music every time I study or want to distract myself. Eladio Carrión is the singer who most conveys sensations to me with his lyrics. I guess it's because I identify with them.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
 
